# claude-desktop-buddy

./: README.md
docs/superpowers/plans/: 2026-07-01-tidbyt-distribution.md
docs/superpowers/specs/: 2026-06-30-ascii-tidbyt-pets-design.md  2026-07-01-tidbyt-distribution-design.md
linux-bridge/: README.md  hooks-settings.example.json  pyproject.toml
linux-bridge/src/claude_buddy/: config.py  daemon.py  hook.py  state.py
linux-bridge/src/familiar/: ble.py  cli.py  config.py  daemon.py  haiku_render.py  hook.py  init.py  tidbyt.py  transport.py
linux-bridge/tests/: test_cli.py  test_config.py  test_daemon.py  test_haiku.py  test_haiku_render.py  test_heartbeat.py  test_hook.py  test_init.py  test_state.py  test_tidbyt.py  test_transcript.py  test_transport.py
src/: main.cpp
tools/: extract_buddies.py  render_ascii_pet.py
