[project]
name = "familiar"
version = "0.1.0"
description = "Familiar: a desk buddy for Claude Code, on an M5 or a Tidbyt"
requires-python = ">=3.11"
dependencies = ["bleak>=0.22", "pillow>=10"]

[project.scripts]
familiar = "familiar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/familiar"]

[dependency-groups]
dev = ["pytest>=8"]
